--- a/development/public/msg/index.html
+++ b/development/public/msg/index.html
@@ -120,11 +120,11 @@
                             <a target="_blank" href="https://gitHub.com/CinexSoft" style="
                                 color: var(--tert-fgcolor);
                                 font-weight: bold; ">CinexSoft</a>
-                            are not responsible any kind of hate speech, racist, sexist,
+                            are not responsible for any kind of hate speech, racist, sexist,
                             or other triggering remarks that you receive through this anonymous messaging platform.
                         </li>
                         <li>
-                            Share the link at your own risk.
+                            Share any link at your own risk.
                         </li>
                     </ul>
                 </div>
