--- a/development/public/msg/index.html
+++ b/development/public/msg/index.html
@@ -121,7 +121,7 @@
                                 color: var(--tert-fgcolor);
                                 font-weight: bold; ">CinexSoft</a>
                             are not responsible for any kind of hate speech, racist, sexist,
-                            or other triggering remarks that you receive through this anonymous messaging platform.
+                            or other triggering remarks that you receive in this anonymous messaging platform.
                         </li>
                         <li>
                             Share any link at your own risk.
