--- a/development/public/home/index.html
+++ b/development/public/home/index.html
@@ -31,12 +31,6 @@
             align-items: center;
             border-radius: 0;
         }
-        div.root header {
-            
-        }
-        div.root header h2 {
-            font-size: 1.5rem;
-        }
         div.root footer {
             
         }
@@ -75,7 +69,7 @@
             color: var(--light-fgcolor);
             background-color: var(--light-bgcolor);
         }
-        div.root div.messages-root h2 {
+        div.root div.messages-root h2.username {
             margin: 10px;
             font-size: 1.5rem;
         }
@@ -89,7 +83,6 @@
             max-width: 400px;
             color: var(--prim-fgcolor);
             background-color: var(--prim-bgcolor);
-            white-space: pre-wrap;
             border-radius: 10px;
             box-shadow: 0px 0px 5px 0px var(--light-shadow-color);
         }
@@ -155,6 +148,7 @@
             visibility: visible;
         }
     </style>
+    <link rel="stylesheet" href="/common/styles/markdown.css"/>
     <!-- NOTE: placeholder IDs are used to set text to HTML nodes using JS
          LIST of placeholders
          1. ph-font-your-name - Holds name of the user who creates and copies the link.
@@ -173,9 +167,9 @@
         </header>
         <div class="vert-layout profile">
             <div class="vert-layout">
-                <h1 class="noselect">
+                <h2 class="noselect username">
                     Hi <font class="placeholder" id="ph-font-your-name">Sonu</font>! 👋
-                </h1>
+                </h2>
                 <p class="noselect info">
                     Share the following link with your friends.
                     Your friends can then send you a secret message.
@@ -191,7 +185,7 @@
                 Your Messages
             </h2>
             <div class="vert-layout messages" id="ph-div-your-messages">
-                <div class="vert-layout message placeholder noselect" id="ph-div-msg-0000"><h3 style="color: #666;">You currently have no messages.</h3></div>
+                <div class="vert-layout message placeholder noselect" id="ph-div-msg-0000"><h4 style="margin: auto; color: #666;">You currently have no messages.</h4></div>
             </div>
         </div>
         <footer>
@@ -203,7 +197,13 @@
     </div>
     <div class="vert-layout SplashScreen noselect" id="SplashScreen-main">
         <div class="loadingAnim"></div>
-        <h1 style="margin-top: 20px; color: var(--dark-bgcolor);">Loading. Please wait...</h1>
+        <h4 style="
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 20px;
+            color: var(--dark-bgcolor); ">
+            Loading. Please wait...
+        </h4>
     </div>
     <!-- HTML sanitizer -->
     <script src="https://cdn.jsdelivr.net/gh/jitbit/HtmlSanitizer@master/HtmlSanitizer.js"></script>
