--- a/development/public/home/index.html
+++ b/development/public/home/index.html
@@ -88,6 +88,11 @@
             border-radius: 10px;
             box-shadow: 0px 0px 5px 0px var(--light-shadow-color);
         }
+        div.root div.messages-root div.messages div.message img {
+            width: 100%;
+            height: auto;
+            border-radius: 10px;
+        }
         div.root div.messages-root div.messages div.message div.del {
             margin: 0;
             padding: 0;
