grid template auto caused long words to occupy full viewport
now, its set to 100%

--- a/development/public/home/index.html
+++ b/development/public/home/index.html
@@ -89,11 +89,8 @@
             box-shadow: 0px 0px 5px 0px var(--light-shadow-color);
         }
         div.root div.messages-root div.messages div.message div.del {
-            margin: 0;
+            margin: 5px 0 0 auto;
             padding: 0;
-            position: relative;
-            top: 4px;
-            right: calc(-100% + 25px);
             width: 1.5rem;
             height: 1.5rem;
             color: #666;
