ui changes - added ellipsis color
added color to ellipsis in /home,
centered h4 on /home placeholder
named ph-div-msg-0000

--- a/development/public/home/index.html
+++ b/development/public/home/index.html
@@ -59,7 +59,7 @@
             padding: 7px 10px;
             max-width: calc(100% - 60px);
             border-radius: 10px;
-            color: var(--prim-fgcolor);
+            color: var(--link-color);
             background-color: var(--prim-bgcolor);
             white-space: nowrap;
             overflow: hidden;
@@ -188,7 +188,14 @@
                 Your Messages
             </h2>
             <div class="vert-layout messages" id="ph-div-your-messages">
-                <div class="vert-layout message placeholder noselect" id="ph-div-msg-0000"><h4 style="margin: auto; color: #666;">You currently have no messages.</h4></div>
+                <div class="vert-layout message placeholder noselect" id="ph-div-msg-0000">
+                    <h4 style="
+                        margin: auto;
+                        color: #666;
+                        text-align: center; ">
+                        You currently have no messages.
+                    </h4>
+                </div>
             </div>
         </div>
         <footer>
