minor ui changes

--- a/development/public/home/index.html
+++ b/development/public/home/index.html
@@ -98,11 +98,18 @@
         div.root div.messages-root div.messages div.message div.del {
             margin: 5px 0 0 auto;
             padding: 0;
+            padding-left: 0;
             width: 1.5rem;
             height: 1.5rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 100%;
             color: #666;
+            background-color: #FBDEDD;
             font-size: 1.5rem;
             text-align: right;
+            cursor: pointer;
         }
         div.root div.messages-root div.messages div.message div.time {
             margin: 0;
