--- a/development/public/msg/index.html
+++ b/development/public/msg/index.html
@@ -60,6 +60,7 @@
             text-align: center;
             border-bottom: 0px;
             border-radius: 10px 10px 0 0;
+            cursor: pointer;
         }
         div.root div.send-msg div.msg-root div.tab-root div.markdown-root {
             margin: 0;
@@ -130,7 +131,7 @@
                         width: 100%; ">
                         <div class="tab-item" id="tab-div-message" style="
                             border-radius: 10px 10px 0 0;
-                            color: var(--prim-fgcolor);
+                            color: var(--tert-bgcolor);
                             background-color: var(--prim-bgcolor); ">
                             Markdown
                         </div>
