minor ui changes

--- a/development/public/home/index.html
+++ b/development/public/home/index.html
@@ -59,7 +59,7 @@
             padding: 7px 10px;
             max-width: calc(100% - 60px);
             border-radius: 10px;
-            color: var(--link-color);
+            color: var(--prim-fgcolor);
             background-color: var(--prim-bgcolor);
             white-space: nowrap;
             overflow: hidden;
@@ -109,6 +109,8 @@
             background-color: #FBDEDD;
             font-size: 1.5rem;
             text-align: right;
+            -webkit-tap-highlight-color: transparent;
+            -moz-tap-highlight-color: transparent;
             cursor: pointer;
         }
         div.root div.messages-root div.messages div.message div.time {
@@ -195,14 +197,7 @@
                 Your Messages
             </h2>
             <div class="vert-layout messages" id="ph-div-your-messages">
-                <div class="vert-layout message placeholder noselect" id="ph-div-msg-0000">
-                    <h4 style="
-                        margin: auto;
-                        color: #666;
-                        text-align: center; ">
-                        You currently have no messages.
-                    </h4>
-                </div>
+                <div class="vert-layout message placeholder noselect" id="ph-div-msg-0000"><h4 style="margin: auto; color: #666;">You currently have no messages.</h4></div>
             </div>
         </div>
         <footer>
