--- a/development/public/msg/index.html
+++ b/development/public/msg/index.html
@@ -60,6 +60,8 @@
             text-align: center;
             border-bottom: 0px;
             border-radius: 10px 10px 0 0;
+            -webkit-tap-highlight-color: transparent;
+            -moz-tap-highlight-color: transparent;
             cursor: pointer;
         }
         div.root div.send-msg div.msg-root div.tab-root div.markdown-root {
